# manatee

./: .bazelrc  .env.example  .env.multiusers  .env.singleuser  .gitignore  404.html  BUILD  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  config.bzl  generate_app_config_file.sh  go.mod  go.sum  index.html  mkdocs.yml  push_all_image.sh  push_all_images.sh  push_image.sh  repositories.bzl  sitemap.xml
.github/workflows/: docs.yml  lint.yaml  main.yml  pr.yml
app/api/: .gitignore  BUILD.bazel  main.go  router.go  router_gen.go
app/api/biz/dal/: BUILD.bazel  init.go
app/api/biz/dal/db/: BUILD.bazel  init.go  job.go
app/api/biz/handler/: BUILD.bazel
app/api/biz/handler/job/: BUILD.bazel  job_handler.go
app/api/biz/model/job/: BUILD.bazel  job.go  job_validator.go
app/api/biz/pkg/errno/: BUILD.bazel
app/api/biz/pkg/storage/: BUILD.bazel  gcs.go  mock.go
app/api/biz/pkg/utils/: BUILD.bazel  resp.go
app/api/biz/router/: BUILD.bazel  register.go
app/api/biz/router/job/: BUILD.bazel  job.go  middleware.go
app/api/biz/service/: BUILD.bazel  job_service.go
app/api/idl/: job.thrift
app/dcr_api/: .hz  BUILD.bazel  Dockerfile  build.sh  go.mod  main.go  router.go  router_gen.go
app/dcr_api/biz/dal/: BUILD.bazel  init.go
app/dcr_api/biz/dal/db/: BUILD.bazel  job.go
app/dcr_api/biz/handler/: BUILD.bazel
app/dcr_api/biz/handler/job/: BUILD.bazel  job_handler.go
app/dcr_api/biz/model/job/: BUILD.bazel  job.go
app/dcr_api/biz/pkg/errno/: BUILD.bazel
app/dcr_api/biz/pkg/storage/: BUILD.bazel  gcs.go  minio.go  storage.go
app/dcr_api/biz/pkg/utils/: BUILD.bazel  resp.go
app/dcr_api/biz/router/: BUILD.bazel  register.go
app/dcr_api/biz/router/job/: BUILD.bazel  job.go
app/dcr_api/biz/service/: BUILD.bazel  build_service.go  job_service.go  job_service_test.go  kaniko_service.go
app/dcr_api/idl/: job.thrift
app/dcr_monitor/: BUILD.bazel  build.sh  go.mod  main.go  reconciler.go  reconciler_test.go
app/dcr_monitor/client/: BUILD.bazel
app/dcr_monitor/imagebuilder/: BUILD.bazel  kaniko.go
app/dcr_monitor/monitor/: BUILD.bazel  instance.go  kaniko.go
app/dcr_monitor/registry/: BUILD.bazel  registry.go
app/dcr_monitor/tee_backend/: BUILD.bazel  confidential_space.go  mock_teebackend.go
app/dcr_tee/: BUILD.bazel  build.sh
app/dcr_tee/attestation/: BUILD.bazel  go.mod
app/dcr_tee/encryption/: BUILD.bazel  go.mod  main.go
app/dcr_tee/util/gscp/: BUILD.bazel  main.go
app/executor/: BUILD.bazel
app/executor/attestation/: BUILD.bazel  main.go
app/jupyterlab_manatee/: 20custom-hook.sh  BUILD.bazel  README.md  noble.lock.json  noble.yaml  package.json  pyproject.toml  requirements.in  requirements.txt  requirements_linux.txt
app/jupyterlab_manatee/jupyterlab_manatee/: handlers.py
app/jupyterlab_manatee/src/: index.ts  jobs.tsx  sidebar.ts
app/jupyterlab_manatee/style/: base.css
app/reconciler/: BUILD.bazel  main.go  reconciler.go  reconciler_test.go
app/reconciler/imagebuilder/: BUILD.bazel  kaniko.go  kaniko_test.go
app/reconciler/registry/: BUILD.bazel  registry.go
app/reconciler/tee_backend/: BUILD.bazel  confidential_space.go  mock_teebackend.go
blog/: index.html
blog/2025/01/07/first-community-release-of-manatee/: index.html
blog/archive/2025/: index.html
deployment/: deploy.sh
deployment/data-clean-room/: deploy.sh  values.yaml
deployment/data-clean-room/templates/: configmap.yaml  deployment.yaml  reconciler.yaml
deployment/jupyterhub/: deploy.sh
deployment/manatee/: Chart.yaml  deploy.sh  values.yaml
deployment/manatee/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  reconciler.yaml  service.yaml
deployment/manatee/templates/tests/: test-connection.yaml
deployment/minikube/: deploy.sh  minio-dev.yaml  mysql-deployment.yaml  mysql-service.yaml
developer/architecture/: index.html
docs/: index.md  project-status.md
docs/blog/posts/: 2025-01-community-release.md
docs/getting-started/: building.md  deployment.md  llm-model-evaluation.md  minikube.md  tutorials.md
docs/stylesheets/: extra.css
getting-started/building/: index.html
getting-started/deployment/: index.html
getting-started/llm-model-evaluation/: index.html
getting-started/minikube/: index.html
getting-started/tutorials/: index.html
pkg/: go.mod  go.sum
pkg/cloud/: BUILD.bazel  gcp.go  provider.go
pkg/config/: BUILD.bazel  config.go
pkg/errno/: BUILD.bazel
pkg/registry/: BUILD.bazel  registry.go
pkg/storage/: BUILD.bazel  gcs.go  minio.go  storage.go
pkg/utils/: BUILD.bazel  resp.go
project-status/: index.html
resources/: apply.sh
resources/deployment/: apply.sh  cluster_rolebinding.tf  db_account.tf  providers.tf  repositories.tf  service_accounts.tf  variables.tf
resources/developer-specific/: db_account.tf  namespace.tf  repositories.tf  service_accounts.tf
resources/gcp/: .terraform.lock.hcl  apply.sh  iam.tf  variables.tf
resources/global/: .terraform.lock.hcl  apply.sh  backend.tf  buckets.tf  cluster.tf  cluster_rolebinding.tf  database.tf  iam.tf  identitypool.tf  providers.tf  repositories.tf  service_accounts.tf  variables.tf
resources/kubernetes/: .terraform.lock.hcl  apply.sh  namespace.tf  role.tf  service_accounts.tf  variables.tf
resources/minikube/: apply.sh  namespace.tf  providers.tf  role.tf  secret.tf  service_accounts.tf  variables.tf
search/: search_index.json
tutorials/: regression.ipynb  tutorial.sh
tutorials/code/: insurance.ipynb  regression.ipynb
tutorials/code/sdk/: __init__.py  data.py
tutorials/data/stage1/: insurance.csv
tutorials/sdk/: data.py
