load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "dcr_monitor_lib",
    srcs = [
        "main.go",
        "reconciler.go",
    ],
    importpath = "github.com/manatee-project/manatee/app/dcr_monitor",
    visibility = ["//visibility:private"],
    deps = [
        "//app/dcr_api/biz/dal/db",
        "//app/dcr_api/biz/model/job",
        "//app/dcr_monitor/imagebuilder",
        "//app/dcr_monitor/tee_backend",
        "//pkg/registry",
        "@com_github_cloudwego_hertz//pkg/common/hlog",
    ],
)

go_binary(
    name = "dcr_monitor",
    embed = [":dcr_monitor_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":dcr_monitor"],
)

oci_image(
    name = "image",
    base = "@distroless_base_linux_amd64",
    entrypoint = ["/dcr_monitor"],
    tars = [
        ":tar",
    ],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load_image",
    image = ":image",
    repo_tags = ["dcr_monitor:latest"],
)

go_test(
    name = "dcr_monitor_test",
    srcs = ["reconciler_test.go"],
    embed = [":dcr_monitor_lib"],
    deps = [
        "//app/dcr_api/biz/dal/db",
        "//app/dcr_api/biz/model/job",
        "//app/dcr_monitor/imagebuilder",
        "@com_github_cloudwego_hertz//pkg/common/test/assert",
        "@io_gorm_gorm//:gorm",
    ],
)
