load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image")

pkg_tar(
    name = "tar",
    srcs = [
        "//app/dcr_tee/encryption:encryption",
        "//app/dcr_tee/attestation:attestation",
    ],
)

oci_image(
    name = "image",
    base = "@scipy-notebook_linux_amd64",
    workdir = "/app",
    tars = [":tar"],
    visibility = ["//visibility:public"],
)