load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "gen_custom_token_tar",
    srcs = [
        "//app/dcr_tee/attestation:gen_custom_token",
    ],
    package_dir = "/home/jovyan",
)

pkg_tar(
    name = "gscp_tar",
    srcs = [
        "//app/dcr_tee/util/gscp",
    ],
    package_dir = "/home/jovyan",
)

oci_image(
    name = "image",
    base = "@scipy-notebook_linux_amd64",
    tars = [
        ":gen_custom_token_tar",
        ":gscp_tar",
    ],
    # FIXME: for some reason, pkg_tar changes the owner of /home/jovyan.
    # run it as root for now, but it will go away once we fully switch to distroless image
    # https://github.com/manatee-project/manatee/issues/6
    user = "root:root",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load_image",
    image = ":image",
    repo_tags = ["dcr_tee:latest"],
)
