load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cloud",
    srcs = [
        "gcp.go",
        "provider.go",
    ],
    importpath = "github.com/manatee-project/manatee/pkg/cloud",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_pkg_errors//:errors",
        "@com_google_cloud_go_compute_metadata//:metadata",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//iterator",
    ],
)
