load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "imagebuilder",
    srcs = ["kaniko.go"],
    importpath = "github.com/manatee-project/manatee/app/dcr_monitor/imagebuilder",
    visibility = ["//visibility:public"],
    deps = [
        "//app/dcr_api/biz/dal/db",
        "//pkg/storage",
        "@com_github_cloudwego_hertz//pkg/common/hlog",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/resource",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
    ],
)

go_test(
    name = "imagebuilder_test",
    srcs = ["kaniko_test.go"],
    embed = [":imagebuilder"],
)
