load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tee_backend",
    srcs = [
        "confidential_space.go",
        "mock_teebackend.go",
    ],
    importpath = "github.com/manatee-project/manatee/app/dcr_monitor/tee_backend",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cloudwego_hertz//pkg/common/hlog",
        "@com_github_pkg_errors//:errors",
        "@com_google_cloud_go_compute//apiv1",
        "@com_google_cloud_go_compute//apiv1/computepb",
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@org_golang_google_protobuf//proto",
    ],
)
