load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "router",
    srcs = ["register.go"],
    importpath = "github.com/manatee-project/manatee/app/api/biz/router",
    visibility = ["//visibility:public"],
    deps = [
        "//app/api/biz/router/job",
        "@com_github_cloudwego_hertz//pkg/app/server",
    ],
)
