load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["job_service.go"],
    importpath = "github.com/manatee-project/manatee/app/dcr_api/biz/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/dcr_api/biz/dal/db",
        "//app/dcr_api/biz/model/job",
        "//app/dcr_api/biz/pkg/errno",
        "@com_github_cloudwego_hertz//pkg/common/hlog",
        "@com_github_google_uuid//:uuid",
        "@com_github_pkg_errors//:errors",
        "@com_google_cloud_go_storage//:storage",
    ],
)

go_test(
    name = "service_test",
    srcs = ["job_service_test.go"],
    embed = [":service"],
)
