load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gscp_lib",
    srcs = ["main.go"],
    importpath = "github.com/manatee-project/manatee/app/dcr_tee/util/gscp",
    visibility = ["//visibility:private"],
    deps = ["//pkg/storage"],
)

go_binary(
    name = "gscp",
    embed = [":gscp_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
