load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = ["resp.go"],
    importpath = "github.com/manatee-project/manatee/app/api/biz/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//app/api/biz/pkg/errno",
        "@com_github_cloudwego_hertz//pkg/app",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
