load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "gcs.go",
        "minio.go",
        "mock.go",
        "storage.go",
    ],
    importpath = "github.com/manatee-project/manatee/app/dcr_api/biz/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_minio_minio_go_v7//:minio-go",
        "@com_github_minio_minio_go_v7//pkg/credentials",
        "@com_github_pkg_errors//:errors",
        "@com_google_cloud_go_iam//credentials/apiv1",
        "@com_google_cloud_go_iam//credentials/apiv1/credentialspb",
        "@com_google_cloud_go_storage//:storage",
    ],
)
